--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         kotlin_version = "1.3.72"
         lifecycleVersion = '2.2.0'
         retrofitVersion = '2.9.0'
+        mockito2CoreVersion = '3.0.0'
+        mockitoKotlinVersion = '2.1.0'
     }
 
     repositories {
